--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
+    "sequelize": "^6.5.0",
     "util": "^0.12.3"
   },
   "devDependencies": {
